--- a/src/App.css
+++ b/src/App.css
@@ -474,16 +474,22 @@ html {
 .download-btn:focus {
   outline: none;
 }
-
 .skills {
   text-align: center;
   padding: 60px 20px;
   background: transparent;
   overflow: hidden;
-  height: 50vh;
+  height: 100vh; /* Ensures full viewport height */
+  display: flex;
+  justify-content: center;
+  align-items: center; /* Centers content vertically and horizontally */
+  flex-direction: column; /* Centers items in a column */
 }
 
-.skill-title ,.Education-title,.Project-title ,.section-title{
+.skill-title,
+.Education-title,
+.Project-title,
+.section-title {
   color: white;
   font-size: 2.5rem;
   margin-bottom: 2.5rem;
@@ -503,7 +509,7 @@ html {
   max-width: 800px;
   margin: 0 auto;
   margin-top: 100px;
-  margin-bottom: 100;
+  margin-bottom: 100px; /* Added px to margin-bottom */
 }
 
 .skill-icon-container {
@@ -556,9 +562,13 @@ html {
 .skill-icon:hover {
   transform: scale(1.4) !important;
 }
+
 /* Responsive Layouts */
 @media screen and (max-width: 1024px) {
-  .skill-title,.Education-title,.Project-title ,.section-title {
+  .skill-title,
+  .Education-title,
+  .Project-title,
+  .section-title {
     font-size: 2rem;
   }
   .skill-icon {
@@ -567,7 +577,10 @@ html {
 }
 
 @media screen and (max-width: 768px) {
-  .skill-title,.Education-title,.Project-title ,.section-title  {
+  .skill-title,
+  .Education-title,
+  .Project-title,
+  .section-title {
     gap: 1.5rem;
     margin-top: 40px;
   }
@@ -588,7 +601,10 @@ html {
 }
 
 @media screen and (max-width: 480px) {
-  .skill-title,.Education-title,.Project-title ,.section-title  {
+  .skill-title,
+  .Education-title,
+  .Project-title,
+  .section-title {
     font-size: 1.6rem;
     margin-bottom: 5rem;
   }
@@ -613,6 +629,7 @@ html {
     padding: 0.3rem 0.6rem;
   }
 }
+
 
 @import url('https://fonts.googleapis.com/css2?family=Jost:wght@200;300;400&display=swap');
 
